structure setup route and fixbug usecase user when login
